<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainlbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/main_screen"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btncar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"

        android:background="@color/mainbtns"
        android:text="@string/btncar"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/mainbtns"
        android:text="@string/btnage"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btncrash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/mainbtns"
        android:text="@string/btncrash"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btncount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/mainbtns"
        android:text="@string/btncount"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/countresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/countresult"
        android:inputType="textMultiLine"
        android:textColorHighlight="@color/design_default_color_error"
        android:textSize="20sp" />

</LinearLayout>