<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".crash">

    <TextView
        android:id="@+id/txtcrash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/crash_screen"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/chcr"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/ch1"
        android:textSize="48sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/chfi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/ch2"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/mainbtns"
        android:text="@string/btnback"
        android:textSize="34sp"
        android:textStyle="bold" />
</LinearLayout>