<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".car">

    <TextView
        android:id="@+id/txtcar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/car_screen"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <FrameLayout
        android:id="@+id/frm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/material_dynamic_neutral90">

        <TextView
            android:id="@+id/txtC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="20dp"
            android:text="@string/car_C"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/car_C"
            android:src="@drawable/cab" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/material_dynamic_neutral90">

        <TextView
            android:id="@+id/txtP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="20dp"
            android:text="@string/car_P"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/car_P"
            android:src="@drawable/pic" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frm3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/material_dynamic_neutral90">

        <TextView
            android:id="@+id/txtS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="20dp"
            android:text="@string/car_S"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/car_S"
            android:src="@drawable/sed" />

    </FrameLayout>

</LinearLayout>